--- a/src/App.css
+++ b/src/App.css
@@ -5,12 +5,106 @@
 .word_list .ol_label {
   color: lime;
 }
-.word_list .check_box {
-  position: relative;
-  display: flex;
-  justify-content: space-around;
-  top: -26px;
-  margin-left: 150px;
+/* .word_list .check_box { */
+  /* position: relative; */
+  /* display: flex; */
+  /* justify-content: space-around; */
+  /* top: -26px; */
+  /* margin-left: 150px; */
+  
+/* } */
+
+
+.word_list {      
+    width: 100%;
+    margin: 2em auto;
+    text-align: left;
+}
+@keyframes click-wave {
+    0% {
+	position: relative;
+	width: 30px;
+	height: 30px;
+	opacity: 0.35;
+    }
+    100% {
+	width: 200px;
+	height: 200px;
+	margin-top: -80px;
+	margin-left: -80px;
+	margin-right:-80px;
+	opacity: 0;
+    }
+}
+.word_list .option-input02 {
+      position: relative;
+      display: flex;
+      justify-content: space-around;
+      top: -33px;
+      margin-left: 150px;
+      
+      right: 0;
+      bottom: 0;
+      left: 0;
+      width: 30px;
+      height: 30px;
+      margin-right: 0.5rem;
+      cursor: pointer;
+      transition: all 0.15s ease-out 0s;
+      color: #ffffff;
+      border: none;
+      outline: none;
+      background: #d7cbcb;
+      -webkit-appearance: none;
+      appearance: none;
+}
+.word_list .option-input02:hover {
+    background: #99FF99;
+}
+.word_list .option-input02:checked {
+    background: lime;
+}
+.word_list .option-input02:checked::before {
+    font-size: 20px;
+    line-height: 30px;
+    position: absolute;
+    display: inline-block;
+    width: 30px;
+    height: 30px;
+    content: '✔';
+    text-align: center;
+}
+.word_list .option-input02:checked::after {
+    position: relative;
+    display: block;
+    content: '';
+    -webkit-animation: click-wave 0.65s;
+    animation: click-wave 0.65s;
+    background: lime;
+}
+.word_list .option-input02.radio {
+    border-radius: 50%;
+}
+.word_list .option-input02.radio::after {
+    border-radius: 50%;
+}
+.word_list label {
+    line-height: 40px;
+    display: block;
+}
+.word_list .option-input02:disabled {
+    cursor: not-allowed;
+    background: #b8b7b7;
+}
+.word_list .option-input02:disabled::before {
+    font-size: 20px;
+    line-height: 30px;
+    position: absolute;
+    display: inline-block;
+    width: 30px;
+    height: 30px;
+    content: '✖︎';
+    text-align: center;
 }
 
 /*# sourceMappingURL=App.css.map */
