--- a/src/index.css
+++ b/src/index.css
@@ -32,12 +32,11 @@ body{
 
 
 .area{
+    position: absolute;
     background: #4e54c8;  
     background: -webkit-linear-gradient(to left, #8f94fb, #4e54c8);  
     width: 100%;
-    height:100vh;
-    
-   
+    height:100%;
 }
 
 .circles{
